Added error and success paragraphs.

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,8 @@
     <p><label for="signin-password">Password:</label> <input id="signin-password" type="password" placeholder="xxxxxxxx"></p>
     <p><button>Sign In</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="register">
    <h2>Register</h2>
@@ -21,6 +23,8 @@
     <p><label for="register-confirm">Email (Confirm):</label> <input id="register-confirm" type="email" placeholder="user@example.com"></p>
     <p><button>Register</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="recover">
    <h2>Recover Password</h2>
@@ -28,6 +32,8 @@
     <p><label for="recover-email">Email:</label> <input id="recover-email" type="email" placeholder="user@example.com"></p>
     <p><button>Recover Password</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="setpassword">
    <h2>Set Password</h2>
@@ -36,6 +42,8 @@
     <p><label for="setpassword-confirm">Password (Confirm):</label> <input id="setpassword-confirm" type="password" placeholder="xxxxxxxx"></p>
     <p><button>Set Password</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="changepassword">
    <h2>Change Password</h2>
@@ -45,6 +53,8 @@
     <p><label for="changepassword-confirm">New Password (Confirm):</label> <input id="changepassword-confirm" type="password" placeholder="xxxxxxxx"></p>
     <p><button>Change Password</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="changeemail">
    <h2>Change Email</h2>
@@ -54,9 +64,13 @@
     <p><label for="changeemail-confirm">New Email (Confirm):</label> <input id="changeemail-confirm" type="email" placeholder="user@example.com"></p>
     <p><button>Change Email</button></p>
    </form>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
   <section id="confirmemail">
    <h2>Confirm Email</h2>
+   <p class="success"></p>
+   <p class="error"></p>
   </section>
  </body>
 </html>
