--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,19 @@
  </head>
  <body>
   <h1>RiverID</h1>
+  <nav id="anonymous">
+   <ul>
+    <li><a href="#signin">Sign In</a></li>
+    <li><a href="#register">Register</a></li>
+    <li><a href="#recover">Recover Password</a></li>
+   </ul>
+  </nav>
+  <nav id="signedin">
+   <ul>
+    <li><a href="#changepassword">Change Password</a></li>
+    <li><a href="#changeemail">Change Email</a></li>
+   </ul>
+  </nav>
   <section id="signin">
    <h2>Sign In</h2>
    <form>
