Expanded header to include email and sign out

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,10 @@
   <title>RiverID</title>
  </head>
  <body>
-  <h1>RiverID</h1>
+  <header>
+   <h1>RiverID</h1>
+   <p><span id="email"></span> <span id="signout">Sign Out</span></p>
+  </header>
   <nav id="anonymous">
    <ul>
     <li><a href="#signin">Sign In</a></li>
