--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,9 @@
  <head>
   <meta charset="utf-8">
   <title>RiverID</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script src="js/jquery-1.6.2.min.js"></script>
+  <script src="js/index.js"></script>
  </head>
  <body>
   <header>
