--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
   </header>
   <nav id="anonymous">
    <ul>
-    <li><a href="#signin">Sign In</a></li>
+    <li><a class="active" href="#signin">Sign In</a></li>
     <li><a href="#register">Register</a></li>
     <li><a href="#recover">Recover Password</a></li>
    </ul>
@@ -30,7 +30,7 @@
    <form>
     <p><label for="signin-email">Email:</label> <input id="signin-email" type="email" placeholder="user@example.com"></p>
     <p><label for="signin-password">Password:</label> <input id="signin-password" type="password" placeholder="xxxxxxxx"></p>
-    <p><button>Sign In</button></p>
+    <p><span></span><button>Sign In</button></p>
    </form>
    <p class="error"></p>
   </section>
@@ -39,7 +39,7 @@
    <form>
     <p><label for="register-email">Email:</label> <input id="register-email" type="email" placeholder="user@example.com"></p>
     <p><label for="register-confirm">Email (Confirm):</label> <input id="register-confirm" type="email" placeholder="user@example.com"></p>
-    <p><button>Register</button></p>
+    <p><span></span><button>Register</button></p>
    </form>
    <p class="success"></p>
    <p class="error"></p>
@@ -48,7 +48,7 @@
    <h2>Recover Password</h2>
    <form>
     <p><label for="recover-email">Email:</label> <input id="recover-email" type="email" placeholder="user@example.com"></p>
-    <p><button>Recover Password</button></p>
+    <p><span></span><button>Recover Password</button></p>
    </form>
    <p class="success"></p>
    <p class="error"></p>
@@ -58,7 +58,7 @@
    <form>
     <p><label for="setpassword-password">Password:</label> <input id="setpassword-password" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="setpassword-confirm">Password (Confirm):</label> <input id="setpassword-confirm" type="password" placeholder="xxxxxxxx"></p>
-    <p><button>Set Password</button></p>
+    <p><span></span><button>Set Password</button></p>
    </form>
    <p class="success"></p>
    <p class="error"></p>
@@ -69,7 +69,7 @@
     <p><label for="changepassword-old">Old Password:</label> <input id="changepassword-old" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="changepassword-new">New Password:</label> <input id="changepassword-new" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="changepassword-confirm">New Password (Confirm):</label> <input id="changepassword-confirm" type="password" placeholder="xxxxxxxx"></p>
-    <p><button>Change Password</button></p>
+    <p><span></span><button>Change Password</button></p>
    </form>
    <p class="success"></p>
    <p class="error"></p>
@@ -80,7 +80,7 @@
     <p><label for="changeemail-password">Password:</label> <input id="changeemail-password" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="changeemail-email">New Email:</label> <input id="changeemail-email" type="email" placeholder="user@example.com"></p>
     <p><label for="changeemail-confirm">New Email (Confirm):</label> <input id="changeemail-confirm" type="email" placeholder="user@example.com"></p>
-    <p><button>Change Email</button></p>
+    <p><span></span><button>Change Email</button></p>
    </form>
    <p class="success"></p>
    <p class="error"></p>
