--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
     <p><label for="register-confirm">Email (Confirm):</label> <input id="register-confirm" type="email" placeholder="user@example.com"></p>
     <p><span></span><button>Register</button></p>
    </form>
-   <p class="success"></p>
+   <p class="success">Your email address has been registered. Kindly check your mail and activate your account by confirming your email address.</p>
    <p class="error"></p>
   </section>
   <section id="recover">
