--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
     <p><label for="recover-email">Email:</label> <input id="recover-email" type="email" placeholder="user@example.com"></p>
     <p><span></span><button>Recover Password</button></p>
    </form>
-   <p class="success"></p>
+   <p class="success">An email has been sent with further instructions on how to recover your password.</p>
    <p class="error"></p>
   </section>
   <section id="setpassword">
