Added success message for change password.

--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
     <p><label for="changepassword-confirm">New Password (Confirm):</label> <input id="changepassword-confirm" type="password" placeholder="xxxxxxxx"></p>
     <p><span></span><button>Change Password</button></p>
    </form>
-   <p class="success"></p>
+   <p class="success">Your password has successfully been changed.</p>
    <p class="error"></p>
   </section>
   <section id="changeemail">
