Added email confirmation message.

--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,7 @@
     <p><label for="changeemail-confirm">New Email (Confirm):</label> <input id="changeemail-confirm" type="email" placeholder="user@example.com"></p>
     <p><span></span><button>Change Email</button></p>
    </form>
-   <p class="success"></p>
+   <p class="success">Your email address has been changed. Please check your email and confirm your new address as soon as possible or you might be unable to continue using your account.</p>
    <p class="error"></p>
   </section>
   <section id="confirmemail">
