Change password is default active in signin nav.

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
   </nav>
   <nav id="signedin">
    <ul>
-    <li><a href="#changepassword">Change Password</a></li>
+    <li><a class="active" href="#changepassword">Change Password</a></li>
     <li><a href="#changeemail">Change Email</a></li>
    </ul>
   </nav>
