--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>RiverID</title>
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
-  <script src="/static/js/jquery-1.6.2.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
   <script src="/static/js/index.js"></script>
  </head>
  <body>
