--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
     <li><a class="active" href="#signin">Sign In</a></li>
     <li><a href="#register">Register</a></li>
     <li><a href="#recover">Recover Password</a></li>
+    <li><a href="#reset">Reset Password</a></li>
    </ul>
   </nav>
   <nav id="signedin">
@@ -53,14 +54,16 @@
    <p class="success">An email has been sent with further instructions on how to recover your password.</p>
    <p class="error"></p>
   </section>
-  <section id="setpassword">
-   <h2>Set Password</h2>
+  <section id="reset">
+   <h2>Reset Password</h2>
    <form>
-    <p><label for="setpassword-password">Password:</label> <input id="setpassword-password" type="password" placeholder="xxxxxxxx"></p>
-    <p><label for="setpassword-confirm">Password (Confirm):</label> <input id="setpassword-confirm" type="password" placeholder="xxxxxxxx"></p>
-    <p><span></span><button>Set Password</button></p>
+    <p><label for="reset-email">Email:</label> <input id="reset-email" type="email" placeholder="user@example.com"></p>
+    <p><label for="reset-token">Token:</label> <input id="reset-token" type="email" placeholder="abc123"></p>
+    <p><label for="reset-password">Password:</label> <input id="reset-password" type="password" placeholder="xxxxxxxx"></p>
+    <p><label for="reset-confirm">Password (Confirm)</label> <input id="reset-confirm" type="password" placeholder="xxxxxxxx"></p>
+    <p><span></span><button>Reset Password</button></p>
    </form>
-   <p class="success"></p>
+   <p class="success">Your password has been changed accordingly. You can now sign in.</p>
    <p class="error"></p>
   </section>
   <section id="changepassword">
