Token is not an email, it's a password.

--- a/static/index.html
+++ b/static/index.html
@@ -58,7 +58,7 @@
    <h2>Reset Password</h2>
    <form>
     <p><label for="reset-email">Email:</label> <input id="reset-email" type="email" placeholder="user@example.com"></p>
-    <p><label for="reset-token">Token:</label> <input id="reset-token" type="email" placeholder="abc123"></p>
+    <p><label for="reset-token">Token:</label> <input id="reset-token" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="reset-password">Password:</label> <input id="reset-password" type="password" placeholder="xxxxxxxx"></p>
     <p><label for="reset-confirm">Password (Confirm)</label> <input id="reset-confirm" type="password" placeholder="xxxxxxxx"></p>
     <p><span></span><button>Reset Password</button></p>
