--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
  <body>
   <header>
    <h1>RiverID</h1>
-   <p><span id="email"></span> <span id="signout">Sign Out</span></p>
+   <p><span id="email"></span> &nbsp; <span id="signout">Sign Out</span></p>
   </header>
   <nav id="anonymous">
    <ul>
