Moved CSS and JS into a single directory.

--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,9 @@
  <head>
   <meta charset="utf-8">
   <title>RiverID</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+  <link rel="stylesheet" type="text/css" href="/static/index.css">
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-  <script src="/static/js/index.js"></script>
+  <script src="/static/index.js"></script>
  </head>
  <body>
   <header>
