Added success and error to email confirmation.

--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,8 @@
     <p><label for="confirm-token">Token:</label> <input id="confirm-token" type="password" placeholder="xxxxxxxxxxxxxxxx"></p>
     <p><span></span><button>Confirm Email</button></p>
    </form>
+   <p class="success">Your email address has been confirmed. Your account is now active.</p>
+   <p class="error"></p>
   </section>
   <section id="recover">
    <h2>Recover Password</h2>
