--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <title>RiverID</title>
   <link rel="stylesheet" type="text/css" href="/static/index.css">
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+  <script src="/static/jquery.cookie.js"></script>
   <script src="/static/index.js"></script>
  </head>
  <body>
