--- a/static/userdetails.html
+++ b/static/userdetails.html
@@ -1,3 +1,3 @@
 <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-<script src="/static/jquery.cookie.js"></script>
-<script src="/static/userdetails.js"></script>
+<script src="http://173.203.86.153/static/jquery.cookie.js"></script>
+<script src="http://173.203.86.153/static/userdetails.js"></script>
