--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
  <head>
   <meta charset="utf-8">
   <title>RiverID</title>
-  <link rel="stylesheet" type="text/css" href="/static/index.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-  <script src="/static/jquery.cookie.js"></script>
-  <script src="/static/index.js"></script>
+  <script src="jquery.cookie.js"></script>
+  <script src="index.js"></script>
  </head>
  <body>
   <header>
