--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
  <head>
   <meta charset="utf-8">
   <title>RiverID</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-  <script src="jquery.cookie.js"></script>
-  <script src="index.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://c739724.ssl.cf2.rackcdn.com/index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script src="https://c739724.ssl.cf2.rackcdn.com/jquery.cookie.js"></script>
+  <script src="https://c739724.ssl.cf2.rackcdn.com/index.js"></script>
  </head>
  <body>
   <header>
